objects/MLS__c.object
<CustomObject>
    <fields>
        <fullName>Additional_MLS_Name__c</fullName>
        <label>Additional MLS Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Broker_Annual_Fee__c</fullName>
        <label>Agent/Broker Annual Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agent_Broker_Initiates_Process__c</fullName>
        <label>Agent/Broker Initiates Process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agent_Broker_Monthly_Fee_from_IDX_Broker__c</fullName>
        <label>Agent/Broker Monthly Fee from IDX Broker</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agent_Broker_Monthly_Fee_from_MLS__c</fullName>
        <label>Agent/Broker Monthly Fee from MLS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agent_Broker_Setup_Fee__c</fullName>
        <inlineHelpText>Billed by MLS to client direct</inlineHelpText>
        <label>Agent/Broker Setup Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agent_Fees__c</fullName>
        <formula>IF(
AND(Agent_Broker_Annual_Fee__c = 0, Agent_Broker_Monthly_Fee_from_IDX_Broker__c = 0, Agent_Broker_Monthly_Fee_from_MLS__c = 0, Agent_Broker_Setup_Fee__c = 0), "No Agent Fees", 
IF(
Undisclosed_Agent_Broker_Fees__c = TRUE, "Undisclosed Fee",
IF(
AND(ISBLANK(Agent_Broker_Annual_Fee__c), ISBLANK(Agent_Broker_Monthly_Fee_from_IDX_Broker__c), ISBLANK(Agent_Broker_Monthly_Fee_from_MLS__c), ISBLANK(Agent_Broker_Setup_Fee__c), Undisclosed_Agent_Broker_Fees__c = FALSE), "Unknown", 
IF(
AND(Agent_Broker_Annual_Fee__c  &gt;= 0, Agent_Broker_Monthly_Fee_from_IDX_Broker__c &gt;= 0, Agent_Broker_Monthly_Fee_from_MLS__c &gt;= 0, Agent_Broker_Setup_Fee__c &gt;= 0), "Has Fees", 
"Partially Known"))))</formula>
        <label>Agent Fees?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_RETS_Servers__c</fullName>
        <label>Authorized RETS Servers</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brokers_Only__c</fullName>
        <label>Brokers Only?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_to_MLS_Date__c</fullName>
        <label>Call to MLS Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cannot_Sync_Reason__c</fullName>
        <label>Cannot Sync Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cannot_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cannot Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compliance_Review_Required_For_Approval__c</fullName>
        <label>Compliance Review Required For Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Config_Notes__c</fullName>
        <label>Config Notes</label>
        <length>1250</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Credential_Type__c</fullName>
        <label>Credential Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Vendor Credentials</fullName>
                </value>
                <value>
                    <fullName>Broker Credentials</fullName>
                </value>
                <value>
                    <fullName>Individual/Agent Credentials</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <description>This was added for the WolfNet Integration process. See: Team-22858</description>
        <label>Data Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MLS 1.0</fullName>
                </value>
                <value>
                    <fullName>MLS DC</fullName>
                </value>
                <value>
                    <fullName>MLS FS</fullName>
                </value>
                <value>
                    <fullName>Third Party</fullName>
                </value>
                <value>
                    <fullName>Migration in Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Digital_Signature__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does MLS Allow Digital Signature?</inlineHelpText>
        <label>Digital Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FTP_RETS__c</fullName>
        <label>FTP/ RETS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FTP</fullName>
                </value>
                <value>
                    <fullName>RETS</fullName>
                </value>
                <value>
                    <fullName>FTP &amp; RETS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integrated_in_the_Past__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Integrated in the Past?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration__c</fullName>
        <label>Integration</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Known__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Known</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MLS_Application_Link__c</fullName>
        <label>MLS Application Link</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLS_Code__c</fullName>
        <label>MLS Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_Clients_Required_to_Sync__c</fullName>
        <inlineHelpText>What is the minimum number of brokers or agents we need to be eligible to sync with this MLS?</inlineHelpText>
        <label>Minimum Clients Required to Sync</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Clients_ALL_TIME_per_MLS__c</fullName>
        <label>Number of Clients ALL TIME per MLS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_LIVE_Clients__c</fullName>
        <label>Number of LIVE Clients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Members__c</fullName>
        <label>Number of Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Process_Notes__c</fullName>
        <label>Process / Notes</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prospects_in_Area_Covered_by_MLS__c</fullName>
        <label>Prospects in Area Covered by MLS</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RETS_Login__c</fullName>
        <label>RETS Login</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RETS_Password__c</fullName>
        <label>RETS Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RETS_URL__c</fullName>
        <label>RETS URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RETS_User_Agent_Login__c</fullName>
        <label>RETS User Agent Login</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RETS_User_Agent_Password__c</fullName>
        <label>RETS User Agent Password</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RETS_User_Agent__c</fullName>
        <label>RETS User Agent</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RETS_Version__c</fullName>
        <label>RETS Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requires_Broker_Approval__c</fullName>
        <label>Requires Broker Approval?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sample_Site_s__c</fullName>
        <label>Sample Site(s)</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sold_Data_Process__c</fullName>
        <label>Sold Data Process</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_Photo_Type__c</fullName>
        <label>Special Photo Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TORCHx_Approved_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TORCHx Approved Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Active_Account_MLS_Connection__c</fullName>
        <label>Total Active Account MLS Connection</label>
        <summaryFilterItems>
            <field>Account_MLS__c.Active_Connection__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Account_MLS__c.Account_Status__c</field>
            <operation>equals</operation>
            <value>LIVE</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_MLS__c.MLS__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_All_Time_Account_MLS_Connection__c</fullName>
        <inlineHelpText>Total of all Account MLS connection (active or inactive).</inlineHelpText>
        <label>Total All Time Account MLS Connection</label>
        <summaryForeignKey>Account_MLS__c.MLS__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Turn_Around_Time__c</fullName>
        <label>Turn Around Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Undisclosed_Agent_Broker_Fees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Undisclosed Agent/Broker Fees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_Annual_Fee__c</fullName>
        <label>Vendor Annual Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Fees__c</fullName>
        <formula>IF(
AND(Vendor_Annual_Fee__c = 0, Vendor_Monthly_Fee__c = 0, Vendor_Quarterly_Fee__c = 0, Vendor_Setup_Fee_one_time__c = 0, Vendor_Setup_Fee_Per_Client__c = 0), "No Vendor Fees", 
IF(
AND(ISBLANK(Vendor_Annual_Fee__c), ISBLANK(Vendor_Monthly_Fee__c), ISBLANK(Vendor_Quarterly_Fee__c), ISBLANK(Vendor_Setup_Fee_one_time__c), ISBLANK(Vendor_Setup_Fee_Per_Client__c)), "Unknown", 
IF(
AND(Vendor_Annual_Fee__c &gt;= 0, Vendor_Monthly_Fee__c &gt;= 0, Vendor_Quarterly_Fee__c &gt;= 0, Vendor_Setup_Fee_one_time__c &gt;= 0, Vendor_Setup_Fee_Per_Client__c &gt;= 0), "Has Fees", 

"Partially Known")))</formula>
        <label>Vendor Fees?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Monthly_Fee__c</fullName>
        <label>Vendor Monthly Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Quarterly_Fee__c</fullName>
        <label>Vendor Quarterly Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Setup_Fee_Per_Client__c</fullName>
        <label>Vendor Setup Fee (Per Client)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Setup_Fee_one_time__c</fullName>
        <label>Vendor Setup Fee (one time)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <inlineHelpText>examples: Flexmls, Rapattoni, Paragon</inlineHelpText>
        <label>Vendor</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Address__c</fullName>
        <label>Website Address</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Website_Considerations__c</fullName>
        <label>Website Considerations</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <label>MLS</label>
    <nameField>
        <label>MLS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MLS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>MLS</fullName>
        <active>true</active>
        <label>MLS</label>
    </recordTypes>
    <validationRules>
        <fullName>Cannot_Sync_Reason</fullName>
        <active>false</active>
        <errorConditionFormula>Cannot_Sync__c = TRUE &amp;&amp; ISBLANK(Cannot_Sync_Reason__c)</errorConditionFormula>
        <errorDisplayField>Cannot_Sync_Reason__c</errorDisplayField>
        <errorMessage>Please put a Cannot Sync Reason</errorMessage>
    </validationRules>
</CustomObject>